# hazel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  hazel.service  hazel.toml  hazel_vagga.toml  vagga.yaml
migrations/20160205110151_create_tables_v1/: down.sql  up.sql
resources/: index.html  package.html  user.html
resources/css/: index.css  package.css  user.css
resources/favicon/: manifest.json
src/: main.rs
src/utils/: config.rs  mod.rs
src/utils/error/: mod.rs
src/utils/middleware/: logger.rs  mod.rs  path_normalize.rs  session.rs
src/web/: mod.rs  server.rs
src/web/backend/: mod.rs  storage.rs  version.rs  xml.rs
src/web/backend/db/: mod.rs  schema.in.rs
src/web/backend/db/schema/: author.rs  dependency.rs  mod.rs  package.rs  packagehastag.rs  packageversion.rs  packageversionhasauthor.rs  packageversionhasdependency.rs  tag.rs  user.rs
src/web/views/: mod.rs
src/web/views/api/: complete_ids.rs  complete_ver.rs  delete.rs  download.rs  index.rs  metadata.rs  mod.rs  package.rs  packages.rs  packagesbyid.rs  search.rs  updates.rs  upload.rs
src/web/views/interface/: apikey.rs  index.rs  login.rs  logout.rs  mail_confirmation.rs  mail_resend.rs  mod.rs  package.rs  pkg_update.rs  pkgver_update.rs  register.rs  transfer.rs  user.rs  user_update.rs
